objects/vlocity_ins__ContextScope__c.object
<CustomObject>
    <description>Registers a scope of context relevant to Vlocity Context Dimensions and Rules. The scope defines how to traverse the entities to access the data relevant to that scope.</description>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EntityPath__c</fullName>
        <label>Entity Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ScopeType__c</fullName>
        <label>Scope Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Context Scope</label>
    <nameField>
        <label>Context Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context Scopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>